--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
+title: 2022_OSS_SHyeonL
+description: 오픈소스 소프트웨어 실습입니다.
 url: https://shyeonl.github.io
 avatar: /avatar.jpeg
 paginate: 5
@@ -36,7 +36,7 @@ social:
   name: Songzi Vong
   links:
     - https://twitter.com/vszhub
-    - https://github.com/vszhub
+    - https://github.com/shyeonl
 google_site_verification: xxxxx
 lang: en
 
@@ -54,6 +54,6 @@ sass:
 
 # Specify the author for blog posts
 author:
-  name: Songzi Vong
-  url: https://github.com/vszhub/
-  email: vszhub@gmail.com
+  name: SeongHyeon Lee
+  url: https://github.com/shyeonl/
+  email: kjghost1@pukyong.ac.kr
